--- a/spring-boot-passbook/src/main/resources/application.properties
+++ b/spring-boot-passbook/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/passbook
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5433/passbook
+spring.datasource.username=postgres
+spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 # configuração do projeto
 server.servlet.context-path=/passbook
